--- a/FenIsleri.Entities/FenIsleri.Entities.csproj
+++ b/FenIsleri.Entities/FenIsleri.Entities.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Abstract\IEntity.cs" />
     <Compile Include="Concrete\Chiefdom.cs" />
+    <Compile Include="Concrete\City.cs" />
     <Compile Include="Concrete\Degree.cs" />
     <Compile Include="Concrete\District.cs" />
     <Compile Include="Concrete\Duty.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Concrete\Region.cs" />
     <Compile Include="Concrete\StaffStatu.cs" />
     <Compile Include="Concrete\Street.cs" />
+    <Compile Include="Concrete\Town.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
